# TreeDonationNft

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TreeDonationNft.cabal
Backend/app/: Main.hs
Backend/scripts/: mintingvalidator.plutus
Backend/src/Contracts/Policies/: MintingPolicy.hs
Backend/src/Contracts/Samples/: AlwaysFails.hs  AlwaysSucceeds.hs
app/: Main.hs
src/: AlwaysSucceeds.hs  OnChainUtils.hs  Shared.hs  Utils.hs
src/Contracts/: AlwaysFails.hs  AlwaysSucceeds.hs
src/Contracts/Policies/: MintingPolicy.hs
src/Contracts/Validators/: MintingValidator.hs
src/Utils/: Helpers.hs  OnChain.hs  SerializeToCbor.hs  WriteToFiles.hs
