cabal-version:      3.0
name:               TreeDonationNft
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A simple application allowing users to donate a sum of ADA for trees

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Sebastian Popa

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         sebah02@yahoo.com

-- A copyright notice.
-- copyright:
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall
library

    exposed-modules:  
      Contracts.AlwaysSucceeds,
      Contracts.AlwaysFails,
      Utils.Helpers,
      Utils.OnChain,
      Utils.WriteToFiles
 
    build-depends:
       base
     , aeson
     , base16-bytestring
     , bytestring
     , cardano-api
     , cardano-binary
     , containers
     , filepath
     , plutus-core
     , plutus-ledger
     , plutus-ledger-api
     , plutus-script-utils
     , plutus-tx
     , plutus-tx-plugin
     , serialise
     , optparse-applicative
 
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wunused-imports -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable TreeDonationNft

    import:
     warnings

    main-is:
     Main.hs

    other-modules:
      Contracts.AlwaysSucceeds,
      Contracts.AlwaysFails,
      Utils.Helpers,
      Utils.OnChain,
      Utils.WriteToFiles

    build-depends:
       base
     , aeson
     , base16-bytestring
     , bytestring
     , cardano-api
     , cardano-binary
     , containers
     , filepath
     , plutus-core
     , plutus-ledger
     , plutus-ledger-api
     , plutus-script-utils
     , plutus-tx
     , plutus-tx-plugin
     , serialise
     , optparse-applicative
    hs-source-dirs:   app, src
    default-language: Haskell2010
    ghc-options: -Wunused-imports -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
